cargo_build.log
# output of `cargo build |& tee cargo_build.log`:
   Compiling compiler_builtins v0.1.140
   Compiling core v0.0.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core)
   Compiling libc v0.2.169
   Compiling proc-macro2 v1.0.92
   Compiling unicode-ident v1.0.14
   Compiling object v0.36.7
   Compiling std v0.0.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/std)
   Compiling memchr v2.7.4
   Compiling cfg-if v1.0.0
   Compiling serde v1.0.217
   Compiling quote v1.0.38
   Compiling syn v2.0.93
   Compiling bitflags v2.6.0
   Compiling aho-corasick v1.1.3
   Compiling regex-syntax v0.8.5
   Compiling crossbeam-utils v0.8.21
   Compiling glob v0.3.2
   Compiling cfg_aliases v0.2.1
   Compiling rustix v0.38.42
   Compiling regex-automata v0.4.9
   Compiling nix v0.29.0
   Compiling clang-sys v1.8.1
   Compiling serde_derive v1.0.217
   Compiling syn v1.0.109
   Compiling prettyplease v0.2.25
   Compiling rustversion v1.0.19
   Compiling log v0.4.22
   Compiling linux-raw-sys v0.4.14
   Compiling rustc-std-workspace-core v1.99.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-core)
   Compiling alloc v0.0.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc)
   Compiling unwind v0.0.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/unwind)
   Compiling adler v1.0.2
   Compiling rustc-demangle v0.1.24
   Compiling rustc-std-workspace-alloc v1.99.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/rustc-std-workspace-alloc)
   Compiling gimli v0.29.0
   Compiling miniz_oxide v0.7.4
   Compiling std_detect v0.1.5 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/stdarch/crates/std_detect)
   Compiling hashbrown v0.15.2
   Compiling panic_unwind v0.0.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_unwind)
   Compiling addr2line v0.22.0
   Compiling panic_abort v0.0.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/panic_abort)
   Compiling crossbeam-epoch v0.9.18
   Compiling bstr v1.11.1
   Compiling minimal-lexical v0.2.1
   Compiling either v1.13.0
   Compiling same-file v1.0.6
   Compiling serde_json v1.0.134
   Compiling thiserror v1.0.69
   Compiling shlex v1.3.0
   Compiling walkdir v2.5.0
   Compiling globset v0.4.15
   Compiling nom v7.1.3
   Compiling crossbeam-deque v0.8.6
   Compiling thiserror-impl v1.0.69
   Compiling cvt v0.1.2
   Compiling libloading v0.8.6
   Compiling anyhow v1.0.95
   Compiling ryu v1.0.18
   Compiling heck v0.4.1
   Compiling itoa v1.0.14
   Compiling home v0.5.11
   Compiling bindgen v0.69.5
   Compiling once_cell v1.20.2
   Compiling which v4.4.2
   Compiling proc_macro v0.0.0 (/home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/proc_macro)
   Compiling strum_macros v0.24.3
   Compiling fs_at v0.2.1
   Compiling cexpr v0.6.0
   Compiling ignore v0.4.23
   Compiling cc v1.1.30
   Compiling itertools v0.12.1
   Compiling regex v1.11.1
   Compiling rustc-hash v1.1.0
   Compiling lazycell v1.3.0
   Compiling bitflags v1.3.2
   Compiling normpath v1.3.0
   Compiling lazy_static v1.5.0
   Compiling fastrand v2.3.0
   Compiling remove_dir_all v0.8.4
   Compiling tempfile v3.14.0
   Compiling globwalk v0.8.1
   Compiling cmake v0.1.52
   Compiling strum v0.24.1
   Compiling filetime v0.2.25
   Compiling semver v1.0.24
   Compiling camino v1.1.9
   Compiling cargo-platform v0.1.9
   Compiling cargo_metadata v0.18.1
   Compiling envy v0.4.2
   Compiling autocfg v1.4.0
   Compiling fnv v1.0.7
   Compiling ident_case v1.0.1
   Compiling darling_core v0.20.10
   Compiling embuild v0.32.0
   Compiling num-traits v0.2.19
   Compiling darling_macro v0.20.10
   Compiling byteorder v1.5.0
   Compiling nb v1.1.0
   Compiling embedded-io-async v0.6.1
   Compiling heapless v0.8.0
   Compiling hash32 v0.3.1
   Compiling darling v0.20.10
   Compiling embedded-io v0.6.1
   Compiling stable_deref_trait v1.2.0
   Compiling embassy-time-driver v0.1.0
   Compiling unicode-xid v0.2.6
   Compiling iana-time-zone v0.1.61
   Compiling const_format_proc_macros v0.2.34
   Compiling chrono v0.4.39
   Compiling esp-idf-sys v0.35.0
   Compiling esp-idf-hal v0.44.1
   Compiling enumset_derive v0.10.0
   Compiling embedded-hal v1.0.0
   Compiling pin-utils v0.1.0
   Compiling futures-core v0.3.31
   Compiling futures-task v0.3.31
   Compiling pin-project-lite v0.2.15
   Compiling version_check v0.9.5
   Compiling embedded-hal-async v1.0.0
   Compiling embassy-sync v0.6.1
   Compiling enumset v1.1.5
   Compiling build-time v0.1.3
   Compiling uncased v0.9.10
   Compiling futures-util v0.3.31
   Compiling const_format v0.2.34
   Compiling esp-idf-svc v0.49.1
   Compiling nb v0.1.3
   Compiling void v1.0.2
   Compiling critical-section v1.2.0
   Compiling futures-sink v0.3.31
   Compiling num_enum_derive v0.7.3
   Compiling litrs v0.4.1
   Compiling document-features v0.2.10
   Compiling embedded-hal v0.2.7
   Compiling num_enum v0.7.3
   Compiling embedded-hal-nb v1.0.0
   Compiling embedded-can v0.4.1
   Compiling atomic-waker v1.1.2
   Compiling prob-idf v0.1.0 (/home/vbaggiol/Documents/esp_rust/prob-idf)
   Compiling embassy-futures v0.1.1
   Compiling embedded-svc v0.28.0
error[E0308]: mismatched types
   --> /home/vbaggiol/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/esp-idf-svc-0.49.1/src/tls.rs:214:36
    |
214 |                 rcfg.alpn_protos = bufs.alpn_protos.as_mut_ptr();
    |                 ----------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `*mut *const u8`, found `*mut *const i8`
    |                 |
    |                 expected due to the type of this binding
    |
    = note: expected raw pointer `*mut *const u8`
               found raw pointer `*mut *const i8`

error[E0308]: mismatched types
     --> /home/vbaggiol/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/esp-idf-svc-0.49.1/src/tls.rs:653:25
      |
652   |                     sys::esp_tls_conn_new_async(
      |                     --------------------------- arguments to this function are incorrect
653   |                         host.as_bytes().as_ptr() as *const i8,
      |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `*const u8`, found `*const i8`
      |
      = note: expected raw pointer `*const u8`
                 found raw pointer `*const i8`
note: function defined here
     --> /home/vbaggiol/Documents/esp_rust/prob-idf/target/riscv32imc-esp-espidf/debug/build/esp-idf-sys-adc7c1684faa3283/out/bindings.rs:40698:12
      |
40698 |     pub fn esp_tls_conn_new_async(
      |            ^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
     --> /home/vbaggiol/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/esp-idf-svc-0.49.1/src/tls.rs:661:25
      |
660   |                     sys::esp_tls_conn_new_sync(
      |                     -------------------------- arguments to this function are incorrect
661   |                         host.as_bytes().as_ptr() as *const i8,
      |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `*const u8`, found `*const i8`
      |
      = note: expected raw pointer `*const u8`
                 found raw pointer `*const i8`
note: function defined here
     --> /home/vbaggiol/Documents/esp_rust/prob-idf/target/riscv32imc-esp-espidf/debug/build/esp-idf-sys-adc7c1684faa3283/out/bindings.rs:40680:12
      |
40680 |     pub fn esp_tls_conn_new_sync(
      |            ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> /home/vbaggiol/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/esp-idf-svc-0.49.1/src/private/cstr.rs:168:8
    |
163 |         cstrs[i] = cstr.as_ptr();
    |         ----- here the type of `cstrs` is inferred to be `[*const u8; N]`
...
168 |     Ok(cstrs)
    |     -- ^^^^^ expected `[*const i8; N]`, found `[*const u8; N]`
    |     |
    |     arguments to this enum variant are incorrect
    |
    = note: expected array `[*const i8; N]`
               found array `[*const u8; N]`
help: the type constructed contains `[*const u8; N]` due to the type of the argument passed
   --> /home/vbaggiol/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/esp-idf-svc-0.49.1/src/private/cstr.rs:168:5
    |
168 |     Ok(cstrs)
    |     ^^^-----^
    |        |
    |        this argument influences the type of `Ok`
note: tuple variant defined here
   --> /home/vbaggiol/.rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/result.rs:532:5
    |
532 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     ^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `esp-idf-svc` (lib) due to 4 previous errors
